[project]
name = "pii-masking"
description = "Evaluates models' ability to identify and mask personally identifiable information in text"
tags = ["placeholder-tag", "train", "eval"]
version = "0.1.1"
requires-python = ">=3.10"
dependencies = [
    "verifiers>=0.1.6.post0",
    "datasets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["pii_masking.py"]